--- a/attestations.html
+++ b/attestations.html
@@ -59,6 +59,18 @@
         <p>Formateur de porte drapeau et de coussins</p>
         <a href="documents/Attestation formateur UNC.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
+
+      <article class="attestation-item">
+        <h2>Page Linkedin.</h2>
+        <p>Page avec des complement sur moi.</p>
+        <a href="documents/https://www.linkedin.com/in/matheo-falcomer/" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+      </article>
+
+      <article class="attestation-item">
+        <h2>Mon CV.</h2>
+        <p>Mon CV pour la premiere annee de BUT</p>
+        <a href="documents/CV-BUT-FALCOMER_Mathéo-3A-2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+      </article>
     </section>
   </main>
 
