--- a/about.html
+++ b/about.html
@@ -37,35 +37,35 @@
         <h2>Mes passions</h2>
         <div class="passions-grid">
           <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/voiture.jpg');"></div>
+            <div class="passion-circle" style="background-image: url('voiture.jpg');"></div>
             <p>Voitures</p>
           </div>
           <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/tennis.jpeg');"></div>
+            <div class="passion-circle" style="background-image: url('tennis.jpeg');"></div>
             <p>Sport</p>
           </div>
           <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/soleil.jpg');"></div>
+            <div class="passion-circle" style="background-image: url('soleil.jpg');"></div>
             <p>Photographie</p>
           </div>
           <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/musique.jpeg');"></div>
+            <div class="passion-circle" style="background-image: url('musique.jpeg');"></div>
             <p>Musique</p>
           </div>
           <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/nourriture.jpg');"></div>
+            <div class="passion-circle" style="background-image: url('nourriture.jpg');"></div>
             <p>Cuisine du monde</p>
           </div>
           <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/benevola.jpg');"></div>
+            <div class="passion-circle" style="background-image: url('benevola.jpg');"></div>
             <p>Transmission de valeurs</p>
           </div>
           <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/voyages.jpg');"></div>
+            <div class="passion-circle" style="background-image: url('voyages.jpg');"></div>
             <p>Voyages</p>
           </div>
            <div class="passion-item">
-            <div class="passion-circle" style="background-image: url('images/informatique.jpg');"></div>
+            <div class="passion-circle" style="background-image: url('informatique.jpg');"></div>
             <p>Informatique</p>
           </div>
         </div>
