--- a/attestations.html
+++ b/attestations.html
@@ -33,43 +33,43 @@
       <article class="attestation-item">
         <h2>Attestation de réalisation de la phase I du SNU</h2>
         <p>Realise durant le moi de Juin 2022.</p>
-        <a href="documents/certif_phase1_snu.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+        <a href="certif_phase1_snu.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
 
       <article class="attestation-item">
         <h2>Certification de participation a la journee citoyenne.</h2>
         <p>Certification de Juin 2022</p>
-        <a href="documents/Certificat individuel de participation à la journée défense et citoyenneté-2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+        <a href="Certificat individuel de participation à la journée défense et citoyenneté-2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
 
       <article class="attestation-item">
         <h2>Certificat de cadet de l'UNC.</h2>
         <p>Porte drapeau et porte coussin</p>
-        <a href="documents/Cadet de l'UNC.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+        <a href="Cadet de l'UNC.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
 
       <article class="attestation-item">
         <h2>Attestation de réalisation de la phase II du SNU</h2>
         <p>Certification de Fevrier 2023</p>
-        <a href="documents/Mathéo FALCOMER-PAGLIANO - attestation phase 2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+        <a href="Mathéo FALCOMER-PAGLIANO - attestation phase 2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
 
       <article class="attestation-item">
         <h2>Certificat de formateur de cadets pour l'UNC.</h2>
         <p>Formateur de porte drapeau et de coussins</p>
-        <a href="documents/Attestation formateur UNC.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+        <a href="Attestation formateur UNC.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
 
       <article class="attestation-item">
         <h2>Page Linkedin.</h2>
         <p>Page avec des complement sur moi.</p>
-        <a href="documents/https://www.linkedin.com/in/matheo-falcomer/" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+        <a href="https://www.linkedin.com/in/matheo-falcomer/" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
 
       <article class="attestation-item">
         <h2>Mon CV.</h2>
         <p>Mon CV pour la premiere annee de BUT</p>
-        <a href="documents/CV-BUT-FALCOMER_Mathéo-3A-2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
+        <a href="CV-BUT-FALCOMER_Mathéo-3A-2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Voir le document</a>
       </article>
     </section>
   </main>
