--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </nav>
 
   <section class="hero">
-    <img src="images/photo.png" alt="Photo de profil" />
+    <img src="photo.png" alt="Photo de profil" />
     <h1>Bienvenue sur mon Portfolio</h1>
     <p>Bonjour et bienvenue sur mon portfolio !</p>
     <p>Actuellement étudiant en réseaux et télécommunications, je suis passionné par l’univers de l’informatique.</p>
