--- a/projet1.html
+++ b/projet1.html
@@ -27,7 +27,7 @@
 
   <main style="text-align:center; padding: 2rem 1rem; max-width: 900px; margin: auto;">
 
-    <img src="images/reseau1.avif" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
+    <img src="reseau1.avif" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
       <p>Ce projet avait pour objectif de mettre en place un réseau local complet et sécurisé. Nous avons configuré des VLANs, un routage inter-VLAN, des règles de pare-feux pour contrôler les accès, et nous avons utilisé packet-tracer pour la réalisation de ce projet. 
