--- a/projet10.html
+++ b/projet10.html
@@ -27,7 +27,7 @@
 
   <main style="text-align:center; padding: 2rem 1rem; max-width: 900px; margin: auto;">
 
-    <img src="images/batimed.jpg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
+    <img src="batimed.jpg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
      <p>- Recrutement : diffusion d'annonces pour un renforcement des équipes</p>
