--- a/projet3.html
+++ b/projet3.html
@@ -27,7 +27,7 @@
 
   <main style="text-align:center; padding: 2rem 1rem; max-width: 900px; margin: auto;">
 
-    <img src="images/web.jpg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
+    <img src="web.jpg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
       <p>Dans le cadre de notre formation, nous avons travaillé en binôme pour créer un site web statique en HTML et CSS. Ce projet avait pour but de nous initier aux bases du développement web tout en abordant un sujet qui nous passionne : le sport. Nous avons conçu une interface simple et claire, mettant en avant les bienfaits de l’activité physique, ainsi que différentes disciplines sportives. Ce travail nous a permis de mieux comprendre la structure d’un site, la mise en page, et l’importance de l’ergonomie dans la présentation de contenus.</p>
