--- a/projet4.html
+++ b/projet4.html
@@ -27,7 +27,7 @@
 
   <main style="text-align:center; padding: 2rem 1rem; max-width: 900px; margin: auto;">
 
-    <img src="images/jupyter.png" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
+    <img src="jupyter.png" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
       <p>Dans le cadre de la SAE 22, nous avons appris à mesurer, générer et caractériser différents types de signaux à l’aide d’outils numériques. En utilisant Jupyter Notebook et des bibliothèques Python comme NumPy et Matplotlib, nous avons pu créer, modifier et visualiser des signaux simples et complexes. Ce projet nous a permis de renforcer nos compétences en traitement du signal et en programmation scientifique.</p>
