--- a/projet5.html
+++ b/projet5.html
@@ -27,7 +27,7 @@
 
   <main style="text-align:center; padding: 2rem 1rem; max-width: 900px; margin: auto;">
 
-    <img src="images/portfolio.jpeg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
+    <img src="portfolio.jpeg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
       <p>Dans le cadre de la SAE 25, nous avons réalisé un portfolio numérique en utilisant les langages HTML et CSS. L’objectif était de créer un site web personnel permettant de présenter notre parcours, nos compétences et nos projets réalisés durant la formation. Ce portfolio agit comme une vitrine professionnelle accessible en ligne, offrant une première impression claire et structurée de notre profil.
