--- a/projet6.html
+++ b/projet6.html
@@ -27,7 +27,7 @@
 
   <main style="text-align:center; padding: 2rem 1rem; max-width: 900px; margin: auto;">
 
-    <img src="images/reseau3.jpg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
+    <img src="reseau3.jpg" alt="Logo Réseau" style="width:150px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
       <p>Cette SAE m'a permis de decouvrir cconcretement le fonctionnement d'un reseau informatique domestique. En dehors des seances de TP, j'ai pu observer et analyser comment mon ordinateur est connecte a Internet, quels equipements interviennent entre ma machine et les sites Web que je visite, et comment ils interagissent. L'objectif etait d'appliquer en autonomie les notions de base des reseaux (adressage, routage, capture de paquets, configuration locale, etc..) dans un contexte reel, à partir de mon propre acces internet à la maison.</p>
