--- a/projet_benevo.html
+++ b/projet_benevo.html
@@ -27,13 +27,13 @@
     <section class="project-grid">
 
       <a href="projet7.html" class="project-card">
-        <img src="images/unc.png" alt="Site associatif" />
+        <img src="unc.png" alt="Site associatif" />
         <h2>Bénévolat - UNC06</h2>
         <p>Porte drapeau et gerbes, formateur et manageur pour les futurs générations.</p>
       </a>
 
       <a href="projet8.html" class="project-card">
-        <img src="images/perenoel.jpg" alt="Formation informatique" />
+        <img src="perenoel.jpg" alt="Formation informatique" />
         <h2>Bénévolat - Ecole maternelle</h2>
         <p>Père Noël</p>
       </a>
