--- a/projet_pro.html
+++ b/projet_pro.html
@@ -27,13 +27,13 @@
     <section class="project-grid">
 
       <a href="projet9.html" class="project-card">
-        <img src="images/orange.png" alt="Stage en développement" />
+        <img src="orange.png" alt="Stage en développement" />
         <h2>Stage orange (4eme)</h2>
         <p>Stagiaire</p>
       </a>
 
       <a href="projet10.html" class="project-card">
-        <img src="images/batimed.jpg" alt="Alternance réseau" />
+        <img src="batimed.jpg" alt="Alternance réseau" />
         <h2>Job d'été - Bati Mediterannee - Nice</h2>
         <p>Bureautique</p>
       </a>
