--- a/projet_rt.html
+++ b/projet_rt.html
@@ -27,37 +27,37 @@
     <section class="project-grid">
 
       <a href="projet1.html" class="project-card">
-        <img src="images/reseau.jpg" alt="Projet 1" />
+        <img src="reseau.jpg" alt="Projet 1" />
         <h2>Configuration réseau sécurisé (SAE21)</h2>
         <p>Configuration VLAN, routage, sécurité réseau.</p>
       </a>
 
       <a href="projet2.html" class="project-card">
-        <img src="images/thales.jpg" alt="Projet 2" />
+        <img src="thales.jpg" alt="Projet 2" />
         <h2>Développement outils web pour prise de photos (SAE 15 & 23)</h2>
         <p>Création d’un site dynamique avec PHP et MySQL.</p>
       </a>
 
       <a href="projet3.html" class="project-card">
-        <img src="images/web.jpg" alt="Projet 3" />
+        <img src="web.jpg" alt="Projet 3" />
         <h2>Initiation WEB (R109)</h2>
         <p>Creation d'un site Web pour commencer a manier les outils html et css.</p>
       </a>
 
       <a href="projet4.html" class="project-card">
-        <img src="images/jupyter.png" alt="Projet 4" />
+        <img src="jupyter.png" alt="Projet 4" />
         <h2>Mesurer et caracteriser un signal (SAE 22)</h2>
         <p>Creer, modifier des signaux et les afficher sur jupyter notebook.</p>
       </a>
 
       <a href="projet5.html" class="project-card">
-        <img src="images/portfolio.jpeg" alt="Projet 5" />
+        <img src="portfolio.jpeg" alt="Projet 5" />
         <h2>Creation d'un portfolio (SAE 25)</h2>
         <p>Mise en place d’un site web pour nous presenter sous un angle informatique</p>
       </a>
 
       <a href="projet6.html" class="project-card">
-        <img src="images/reseau3.jpg" alt="Projet 6" />
+        <img src="reseau3.jpg" alt="Projet 6" />
         <h2>Initiation aux reseaux informatique (SAE 12)</h2>
         <p>Decouverte et mise en oeuvre d'un premier reseau informatique en dehors des TP.</p>
       </a>
