--- a/projets.html
+++ b/projets.html
@@ -27,19 +27,19 @@
   <section class="project-grid">
 
     <a href="projet_rt.html" class="project-card">
-      <img src="images/r&t.jpg" alt="Projets R&T">
+      <img src="r&t.jpg" alt="Projets R&T">
       <h2>Projets R&T</h2>
       <p>Travaux réalisés durant la formation : réseau, web, systèmes, etc.</p>
     </a>
 
     <a href="projet_pro.html" class="project-card">
-      <img src="images/exppro.jpg" alt="Expériences professionnelles">
+      <img src="exppro.jpg" alt="Expériences professionnelles">
       <h2>Parcours professionnels</h2>
       <p>Stages, alternances ou emplois liés au domaine informatique.</p>
     </a>
 
     <a href="projet_benevo.html" class="project-card">
-      <img src="images/benev.jpg" alt="Aide bénévole">
+      <img src="benev.jpg" alt="Aide bénévole">
       <h2>Aide bénévole</h2>
       <p>Participation à des projets associatifs.</p>
     </a>
