--- a/projet4.html
+++ b/projet4.html
@@ -32,9 +32,9 @@
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
       <p>Dans le cadre de la SAE 22, nous avons appris à mesurer, générer et caractériser différents types de signaux à l’aide d’outils numériques. En utilisant Jupyter Notebook et des bibliothèques Python comme NumPy et Matplotlib, nous avons pu créer, modifier et visualiser des signaux simples et complexes. Ce projet nous a permis de renforcer nos compétences en traitement du signal et en programmation scientifique.</p>
     </section>
-    <a href="documents/HDvsSD_PhaseI_Tarantino_Falcomer.ipynb" download>Télécharger le fichier de la phase I. </a>
+    <a href="HDvsSD_PhaseI_Tarantino_Falcomer.ipynb" download>Télécharger le fichier de la phase I. </a>
 
-    <a href="documents/HighDef_PhaseII&III_Tarantino_Falcomer.ipynb" download> Télécharger le fichier de la phase II & III</a>
+    <a href="HighDef_PhaseII&III_Tarantino_Falcomer.ipynb" download> Télécharger le fichier de la phase II & III</a>
 
     <h2 style="margin-top: 3rem; color: var(--accent); font-size: 1.8rem;">Compétences mises en œuvre</h2>
 
