--- a/projet6.html
+++ b/projet6.html
@@ -33,9 +33,9 @@
       <p>Cette SAE m'a permis de decouvrir cconcretement le fonctionnement d'un reseau informatique domestique. En dehors des seances de TP, j'ai pu observer et analyser comment mon ordinateur est connecte a Internet, quels equipements interviennent entre ma machine et les sites Web que je visite, et comment ils interagissent. L'objectif etait d'appliquer en autonomie les notions de base des reseaux (adressage, routage, capture de paquets, configuration locale, etc..) dans un contexte reel, à partir de mon propre acces internet à la maison.</p>
     </section>
 
-    <a href="documents/Enonce-SAE12.pdf" download>Ici vous pouvez trouver un lien menant vers le sujet. </a>
-    <a href="documents/SAÉ 12.pdf" download>Ici vous pouvez trouver un lien menant vers le rapport (1) de ce projet. </a>
-    <a href="documents/SAÉ 12-Falcomer_Matheo (Partie 2) (2).pdf" download>Ici vous pouvez trouver un lien menant vers le rapport (2) de ce projet.</a>
+    <a href="Enonce-SAE12.pdf" download>Ici vous pouvez trouver un lien menant vers le sujet. </a>
+    <a href="SAÉ 12.pdf" download>Ici vous pouvez trouver un lien menant vers le rapport (1) de ce projet. </a>
+    <a href="SAÉ 12-Falcomer_Matheo (Partie 2) (2).pdf" download>Ici vous pouvez trouver un lien menant vers le rapport (2) de ce projet.</a>
 
     <h2 style="margin-top: 3rem; color: var(--accent); font-size: 1.8rem;">Compétences mises en œuvre</h2>
 
