--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <main>
     <section class="about-container">
       <div class="about-left">
-        <img src="images/photo.png" alt="Photo de profil" class="profile-photo" />
+        <img src="photo.png" alt="Photo de profil" class="profile-photo" />
       </div>
 
       <div class="about-right">
