--- a/projet_rt.html
+++ b/projet_rt.html
@@ -13,6 +13,7 @@
     <div class="nav-links">
       <a href="index.html">Accueil</a>
       <a href="projets.html" class="active">Projets</a>
+      <a href="compétences.html">Compétences</a>
       <a href="about.html">À propos</a>
       <a href="attestations.html">Attestations</a>
     </div>
@@ -82,3 +83,4 @@
 
 </body>
 </html>
+
