--- a/projet_rt.html
+++ b/projet_rt.html
@@ -56,14 +56,14 @@
 
       <a href="projet4.html" class="project-card">
         <img src="images/jupyter.png" alt="Projet 4" />
-        <h2>Mesurer et caracteriser un signal (SAE 22)</h2>
-        <p>Creer, modifier des signaux et les afficher sur jupyter notebook.</p>
+        <h2>Mesures et caracterisation d'un signal (SAE 22)</h2>
+        <p>Creation, modification des signaux et affichage sur jupyter notebook.</p>
       </a>
 
       <a href="projet5.html" class="project-card">
         <img src="images/portfolio.jpeg" alt="Projet 5" />
         <h2>Creation d'un portfolio (SAE 25)</h2>
-        <p>Mise en place d’un site web pour nous presenter sous un angle informatique</p>
+        <p>Mise en place d’un site web pour se presenter sous un angle informatique</p>
       </a>
 
       <a href="projet6.html" class="project-card">
@@ -83,4 +83,5 @@
 
 </body>
 </html>
+
 
