--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </div>
   </nav>
 
-  <header class="page-headerr">
+  <header class="page-header">
     <h1>À propos de moi</h1>
     <div class="transparent-block">
     <p>Découvrez un peu plus qui je suis, mes passions et mes centres d'intérêt.</p>
@@ -107,3 +107,4 @@
   </footer>
 </body>
 </html>
+
