--- a/projet_pro.html
+++ b/projet_pro.html
@@ -48,6 +48,12 @@
         <p>Bureautique</p>
       </a>
 
+      <a href="projet11.html" class="project-card">
+        <img src="images/alternance.png" alt="Alternance réseau" />
+        <h2>Alternance - Azuradiologie</h2>
+        <p>Alternance</p>
+      </a>
+
     </section>
   </main>
 
@@ -59,4 +65,5 @@
 
 </body>
 </html>
+
 
