--- a/projet11.html
+++ b/projet11.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Job d'été - Bati Méditerranée</title>
+  <title>Alternance - Azuradiologie</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,32 +28,27 @@
   </a>
 
   <header class="page-header">
-    <h1>Job d'été - Bati Méditerranée - Nice</h1>
+    <h1>Alternance - Azuradiologie</h1>
     <div class="transparent-block">
-      <p>Bureautique</p>
+      <p>Alternance</p>
     </div>
   </header>
 
   <main style="text-align:center; padding: 2rem 1rem; max-width: 900px; margin: auto;">
 
-    <img src="images/batimed.jpg" alt="Logo Bati Méditerranée" style="width:250px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
+    <img src="images/alternance.png" alt="Logo Bati Méditerranée" style="width:250px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
-      <p>- Recrutement : diffusion d'annonces pour un renforcement des équipes</p>
-      <p>- Création d'univers visuels adaptés aux projets</p>
-      <p>- Gestion administrative : collecte, classement, archivage</p>
-      <p>- Diagnostic, commande et réparation des installations</p>
+      <p>En cours...</p>
     </section>
 
     <h2 style="margin-top: 3rem; color: var(--accent); font-size: 1.8rem;">Compétences mises en œuvre</h2>
 
     <ul class="skills-list">
-      <li class="skill-block"><a href="compétences.html#developpement" class="white-link">Développement Python</a></li>
-      <li class="skill-block"><a href="compétences.html#analyse" class="white-link">Compréhension</a></li>
-      <li class="skill-block"><a href="compétences.html#organisation" class="white-link">Optimisation des tâches</a></li>
     </ul>
 
   </main>
 
 </body>
 </html>
+
