--- a/projet_pro.html
+++ b/projet_pro.html
@@ -48,10 +48,10 @@
         <p>Bureautique</p>
       </a>
 
-      <a href="projet11.html" class="project-card">
+      <a class="project-card">
         <img src="images/alternance.png" alt="Alternance réseau" />
         <h2>Alternance - Azuradiologie</h2>
-        <p>Alternance</p>
+        <p>Alternance en cours de réalisation</p>
       </a>
 
     </section>
@@ -65,5 +65,6 @@
 
 </body>
 </html>
+
 
 
