--- a/projet11.html
+++ b/projet11.html
@@ -39,7 +39,10 @@
     <img src="images/alternance.png" alt="Logo Bati Méditerranée" style="width:250px; margin-bottom: 1.5rem; border-radius: 12px; border: 3px solid var(--accent); box-shadow: 0 0 12px var(--accent-light);" />
 
     <section style="font-size: 1.1rem; line-height: 1.8; text-align: justify;">
-      <p>En cours...</p>
+      <p>Administration d'application médicales</p>
+      <p>Aide au personnelle sur la comprehension des applications</p>
+      <p>Sauvegarde des images et des systemes presents au seins de la structure</p>
+      <p></p>
     </section>
 
     <h2 style="margin-top: 3rem; color: var(--accent); font-size: 1.8rem;">Compétences mises en œuvre</h2>
@@ -51,4 +54,5 @@
 
 </body>
 </html>
+
 
