--- a/compétences.html
+++ b/compétences.html
@@ -124,9 +124,11 @@
 
   </main>
 
-  <footer style="text-align:center; padding:2rem 1rem; background:#111; color:#fff;">
-    <p>&copy; 2025 Mon Portfolio. Tous droits réservés.</p>
+  <footer style="background-color:#222; color:#eee; padding: 1.5rem; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 0.9rem;">
+    <p>© 2025 Mon Portfolio. Tous droits réservés.</p>
+    <p>Crédits et réalisation par <a target="_blank" rel="noopener" style="color:#f39c12; text-decoration:none;">@Falcomer-Pagliano_Matheo</a></p>
   </footer>
 
 </body>
 </html>
+
