--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  <div class="cursor1">
   <nav>
     <div class="logo">Mon Portfolio</div>
     <div class="nav-links">
@@ -48,6 +48,7 @@
       </form>
     </section>
   </footer>
-
+</div>
 </body>
 </html>
+
