--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>Bonjour et bienvenue sur mon Portfolio</h1>
 
       <div class="transparent-block-2">
-        <p>Actuellement étudiant en réseaux et télécommunications, je suis passionné par l’univers de l’informatique.</p>
+        <p>Actuellement en deuxième année de formation en réseaux et télécommunications, et dans ma première année d’alternance, je suis animé par une véritable passion pour l’univers de l’informatique.</p>
       </div>
       <div class="transparent-block-2">
         <p>Curieux de découvrir mes projets, mes compétences ou encore ce qui me motive au quotidien ?</p>
@@ -49,5 +49,6 @@
   </footer>
 </body>
 </html>
+
 
 
