--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="nav-links">
       <a href="index.html" class="active">Accueil</a>
       <a href="projets.html">Projets</a>
+      <a href="exppro.html">Expérience professionnelle</a>
       <a href="compétences.html">Compétences</a>
-      <a href="about.html">À propos</a>
       <a href="attestations.html">Attestations</a>
+      <a href="about.html">À propos</a>
     </div>
   </nav>
 
@@ -49,6 +50,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
