--- a/about.html
+++ b/about.html
@@ -10,11 +10,12 @@
   <nav>
     <div class="logo">Mon Portfolio</div>
     <div class="nav-links">
-      <a href="index.html">Accueil</a>
+      <a href="index.html" class="active">Accueil</a>
       <a href="projets.html">Projets</a>
+      <a href="exppro.html">Expérience professionnelle</a>
       <a href="compétences.html">Compétences</a>
-      <a href="about.html" class="active">À propos</a>
-      <a href="attestations.html" class="active">Attestations</a>
+      <a href="attestations.html">Attestations</a>
+      <a href="about.html">À propos</a>
     </div>
   </nav>
 
@@ -107,4 +108,5 @@
   </footer>
 </body>
 </html>
+
 
