--- a/compétences.html
+++ b/compétences.html
@@ -61,11 +61,12 @@
   <nav>
     <div class="logo">Mon Portfolio</div>
     <div class="nav-links">
-      <a href="index.html">Accueil</a>
+      <a href="index.html" class="active">Accueil</a>
       <a href="projets.html">Projets</a>
-      <a href="compétences.html" class="active">Compétences</a>
-      <a href="about.html">À propos</a>
+      <a href="exppro.html">Expérience professionnelle</a>
+      <a href="compétences.html">Compétences</a>
       <a href="attestations.html">Attestations</a>
+      <a href="about.html">À propos</a>
     </div>
   </nav>
 
@@ -131,4 +132,5 @@
 
 </body>
 </html>
+
 
