--- a/projet8.html
+++ b/projet8.html
@@ -11,11 +11,12 @@
   <nav>
     <div class="logo">Mon Portfolio</div>
     <div class="nav-links">
-      <a href="index.html">Accueil</a>
-      <a href="projets.html" class="active">Projets</a>
+      <a href="index.html" class="active">Accueil</a>
+      <a href="projets.html">Projets</a>
+      <a href="exppro.html">Expérience professionnelle</a>
       <a href="compétences.html">Compétences</a>
-      <a href="about.html">À propos</a>
       <a href="attestations.html">Attestations</a>
+      <a href="about.html">À propos</a>
     </div>
   </nav>
 
@@ -53,3 +54,4 @@
 
 </body>
 </html>
+
