--- a/exppro.html
+++ b/exppro.html
@@ -20,15 +20,8 @@
     </div>
   </nav>
 
-  <a href="projets.html" class="back-arrow">
-    <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
-      <path d="M15 18l-6-6 6-6" stroke="#f39c12" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
-    Retour aux projets
-  </a>
-
   <header class="page-header">
-    <h1>Parcours professionnels</h1>
+    <h1>Expérience professionnelle</h1>
     <div class="transparent-block">
     <p>Stages, alternances et emplois liés au domaine informatique.</p>
     </div>
@@ -66,6 +59,7 @@
 
 </body>
 </html>
+
 
 
 
