--- a/projets.html
+++ b/projets.html
@@ -20,7 +20,7 @@
     </div>
   </nav>
   <header class="page-header">
-    <h1>Mes Projets</h1>
+    <titles><h1>Mes Projets</h1></titles>
     <div class="transparent-block">
       <p>Explorez ici les projets qui reflètent mes compétences, mon parcours et mon engagement.</p>
     </div>
@@ -51,5 +51,6 @@
 
 </body>
 </html>
+
 
 
